--- a/gruene/goering-eckardt/index.html
+++ b/gruene/goering-eckardt/index.html
@@ -87,30 +87,31 @@
             Bei der Bundestagswahl 2025 zeigte sich eindrucksvoll, wie "beliebt"
             KGE in ihrer Heimat wirklich ist. In ihrem Wahlkreis (Erfurt –
             Weimar) erhielt sie katastrophale
-            <strong>3,1 % der Erststimmen</strong>. In der freien Wirtschaft
-            wäre das eine fristlose Kündigung, bei den Grünen reicht ein
-            sicherer Listenplatz, um weiter vom Steuerzahler alimentiert zu
-            werden.
+            <strong>3,1% der Erststimmen</strong>. In der freien Wirtschaft wäre
+            das eine fristlose Kündigung, bei den Grünen reicht ein sicherer
+            Listenplatz, um weiter vom Steuerzahler alimentiert zu werden.
           </p>
 
           <p>
             <strong>Grüne Familienförderung ("Vetternwirtschaft"):</strong>
-            Im November 2022 genehmigte das grün geführte Außenministerium
-            (Baerbock) zwei Millionen Euro Steuergelder für den
-            Seenotrettungs-Verein <em>United4Rescue</em>. Ein glücklicher
-            Zufall: Im Vorstand des Vereins saß ausgerechnet Göring-Eckardts
-            Lebensgefährte. Während man anderen Parteien Korruption vorwirft,
-            nennt man das bei den Grünen wohl "Synergieeffekte".
+            Im November 2022 genehmigte das grün geführte Außenministerium (<a
+              href="../baerbock/"
+              >Baerbock</a
+            >) zwei Millionen Euro Steuergelder für den Seenotrettungs-Verein
+            <em>United4Rescue</em>. Ein glücklicher Zufall: Im Vorstand des
+            Vereins saß ausgerechnet Göring-Eckardts Lebensgefährte. Während man
+            anderen Parteien Korruption vorwirft, nennt man das bei den Grünen
+            wohl "Synergieeffekte".
           </p>
 
           <p>
             <strong>Demokratieverständnis:</strong>
             Als Bundestagsvizepräsidentin nutzte sie ihr Amt gerne für
             ideologische Erziehungsmaßnahmen. Unvergessen, wie sie 2024 ein
-            Ordnungsgeld gegen Beatrix von Storch verhängte, nur weil diese die
+            Ordnungsgeld gegen Beatrix von Storch verhängte, weil diese die
             biologische Realität benannte (dass Tessa Ganserer biologisch ein
-            Mann ist). Fakten werden bestraft, wenn sie nicht ins Weltbild
-            passen.
+            Mann ist). Fakten müssen also bestraft werden, wenn sie nicht ins
+            Weltbild passen.
           </p>
           <p>
             Im Januar 2025 sorgte sie mit ihrer Aussage, dass Integration nicht
@@ -218,9 +219,9 @@
             Im Juni 2024 sorgte die Entscheidung von Katrin Göring-Eckardt, ein
             Ordnungsgeld gegen <b>Beatrix von Storch</b> zu verhängen, für
             Aufsehen. Von Storch hatte die Grüne Abgeordnete
-            <b>Tessa Ganserer</b> wiederholt als „biologisch und juristisch ein
-            Mann“ bezeichnet und sie mit dem männlichen Titel „Herr Ganserer“
-            angesprochen.
+            <b><a href="../ganserer/">Tessa Ganserer</a></b> als „biologisch und
+            juristisch ein Mann“ bezeichnet und sie mit dem männlichen Titel
+            „Herr Ganserer“ angesprochen.
           </p>
           <p class="party-highlight-description">
             Göring-Eckardt, in ihrer Funktion als
