--- a/gruene/fester/index.html
+++ b/gruene/fester/index.html
@@ -59,13 +59,13 @@
 
           <h3>Politische Laufbahn</h3>
           <p>
-            <strong>Seit Herbst 2025:</strong> Aktivistin bei Sea-Eye (Flucht in die NGO-Szene).
+            <strong>Seit Herbst 2025:</strong> Aktivistin bei Sea-Eye.
           </p>
           <p>
             <strong>2021 – 02/2025:</strong> Mitglied des Deutschen Bundestages.
           </p>
           <p>
-            <strong>02/2025:</strong> Scheitern bei der Bundestagswahl (Der Wähler beendete das Experiment).
+            <strong>02/2025:</strong> Scheitern bei der Bundestagswahl.
           </p>
 
           <h3>Politische Positionen</h3>
@@ -75,18 +75,14 @@
 
           <h3>FACTS</h3>
           <p>
-            Emilia Fester war das Symbolbild der jungen, unerfahrenen Grünen-Fraktion. 2025 verpasste sie den Wiedereinzug in den Bundestag deutlich – die Wähler hatten offenbar genug von Tanzvideos im Plenarsaal und moralischen Belehrungen ohne Lebenserfahrung.
+            Emilia Fester war das Symbolbild der jungen, unerfahrenen Grünen-Fraktion. 2025 verpasste sie den Wiedereinzug in den Bundestag deutlich – die Wähler hatten scheinbar genug von Tanzvideos im Plenarsaal und moralischen Belehrungen ohne Lebenserfahrung.
           </p>
 
           <p>
             <strong>Die legendäre „Opfer“-Rede:</strong>
-            Unvergessen bleibt ihr Auftritt zur Impfpflicht 2022, in dem sie hysterisch schrie, sie habe ihre Jugend geopfert, sei „nicht an der Uni“ gewesen und habe keine fremden Menschen küssen können. Faktencheck: Sie war an keiner Uni eingeschrieben, machte während der Pandemie Urlaub in Dänemark (ohne Maskenpflicht) und das „Küssen von Fremden“ ist wohl kaum eine Staatsaufgabe.
+            Unvergessen bleibt ihr Auftritt zur Impfpflicht 2022, in dem sie hysterisch schrie, sie habe ihre Jugend geopfert, sei „nicht an der Uni“ gewesen und habe keine fremden Menschen küssen können. Faktencheck: Sie war an keiner Uni eingeschrieben, machte während der Pandemie Urlaub in Dänemark und das „Küssen von Fremden“ ist wohl kaum eine Staatsaufgabe.
           </p>
 
-          <p>
-            <strong>Vom Parlament nach Sizilien:</strong>
-            Noch im September 2024 beschwerte sie sich, dass man zu viel über Asylgesetzgebung diskutiere. Die Ironie: Genau in diesem Bereich arbeitet sie jetzt. Nach dem Verlust ihres Mandats heuerte sie bei der NGO <strong>Sea-Eye</strong> an. Während sie früher beklagte, nicht reisen zu können, postet sie nun Fotos aus dem Zug nach Rom auf dem Weg ins Basecamp auf Sizilien. Ein klassischer Karriereweg: Wenn der Wähler einem das Mandat entzieht, flüchtet man sich in die moralische Überlegenheit des Aktivismus.
-          </p>
         </div>
           
         <img
