--- a/linke/reichinnek/index.html
+++ b/linke/reichinnek/index.html
@@ -122,8 +122,88 @@
     <section class="party-highlights">
       <h2 class="party-section-title">Skandale und Kontroversen</h2>
 
-      <!-- Highlight 1: Reichinnek zu Charlie Kirk -->
-            <div class="party-highlight" id="empathie">
+      <!-- Highlight: Reichinnek bei Lanz (Mietendeckel & Migräne) -->
+      <div class="party-highlight" id="mietmigraene">
+        <h3 class="party-highlight-title">
+          Die "Miet-Migräne" bei Markus Lanz
+        </h3>
+
+        <div class="highlight-skandal-scale">
+          <h4>Wirtschaftskompetenz: 1/10 📉⚪⚪⚪⚪⚪⚪⚪⚪⚪</h4>
+          <p class="highlight-description">
+            Große Forderungen, null Zahlen: Wenn die Realität Kopfschmerzen
+            bereitet.
+          </p>
+          <div class="gradient-bar-container">
+            <div class="gradient-bar-filled" style="width: 10%"></div>
+            <div class="gradient-bar-unfilled" style="width: 90%"></div>
+          </div>
+        </div>
+
+        <button class="toggle-button" onclick="toggleHighlight(this)">
+          Details anzeigen <span class="arrow">▼</span>
+        </button>
+
+        <div class="collapsible-content">
+          <p class="party-highlight-description">
+            Heidi Reichinnek trat bei Markus Lanz an, um für das Kernthema der
+            Linken zu kämpfen: den bundesweiten
+            <mark class="linke">Mietendeckel</mark>. Doch was als großer Schlag
+            gegen "Miethaie" geplant war, endete als öffentliche
+            Selbst-Demontage. Als Lanz nach einfachsten Grundlagen fragte – Wie
+            viele Mietwohnungen gibt es eigentlich? Wer besitzt diese? Wie hoch
+            sind die Renditen? – herrschte bei der Fachpolitikerin Stille.
+          </p>
+
+          <p class="party-highlight-description">
+            Statt Fakten lieferte Reichinnek folgende kreative Erklärung:
+            <b class="linke">"Ich habe Migräne."</b>
+            Es wurde offensichtlich, dass hier tiefgreifende Eingriffe in den
+            Wohnungsmarkt gefordert werden (Enteignungen, Preisstopps), ohne
+            auch nur die elementarsten Marktdaten zu kennen. Lanz zerlegte die
+            ideologischen Phrasen und entlarvte das Vorgehen: Lautstarke Moral
+            ersetzt Fachwissen. Kritiker spotteten anschließend, dass
+            Kopfschmerzen vielleicht eine natürliche Reaktion sind, wenn linke
+            Utopien auf ökonomische Realität prallen.
+          </p>
+
+          <div class="smallvideo-container">
+            <div class="video-wrapper">
+              <!-- Hier Youtube-Link zum Lanz-Ausschnitt einfügen -->
+              <iframe
+                src="https://www.youtube.com/embed/HfR0nUptzQU?si=iQAtXUkvRiEy1Rv3"
+                title="Heidi Reichinnek - Anzahl der Mietwohnungen und die Migräne"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
+          <p class="party-highlight-date">
+            <strong>Zeitraum:</strong> April 2025
+          </p>
+          <p class="party-highlight-source">
+            <strong>Quelle:</strong>
+            <a
+              href="https://www.focus.de/politik/meinung/migraene-auftritt-von-heidi-reichinnek-bei-lanz-ist-gefundenes-fressen-fuer-jan-fleischhauer_9b8d4300-4afc-4e52-99b5-2e2849712934.html"
+              target="_blank"
+              >FOCUS: Linken-Star Heidi Reichinnek erklärt ihr Nicht-Wissen bei Lanz mit einem Migräneanfall</a
+            >
+          </p>
+
+          <div class="party-highlight-hashtags">
+            <a href="./">#reichinnek</a>
+            <a href="../">#linke</a>
+            <span class="hashtag">#mietendeckel</span>
+            <span class="hashtag">#migräne</span>
+            <span class="hashtag">#lanz</span>
+            <span class="hashtag">#fachwissen404</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Highlight: Reichinnek zu Charlie Kirk -->
+      <div class="party-highlight" id="empathie">
         <h3 class="party-highlight-title">
           Heidi Reichinnek und ihre Reaktion auf den Mord an Charlie Kirk
         </h3>
@@ -264,8 +344,8 @@
           <div class="smallvideo-container">
             <div class="video-wrapper">
               <iframe
-                src="https://www.youtube.com/embed/wAiNKzTEokk?si=VjblTTAGu3KeTN8C"
-                title="Heidi Reichinnek im Stern-Interview: 'Das in der DDR war kein Sozialismus'"
+                src="https://www.youtube.com/embed/zwWurhQ9LUM?si=hmQrOJTdr9R8mNq5"
+                title="Ich empfehle Frau Reichinnek ganz dringend, „Animal Farm“ von Orwell zu lesen!"
                 frameborder="0"
                 allowfullscreen
               ></iframe>
