--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -84,12 +84,23 @@
 
           <h3>FACTS</h3>
           <p>
-            Robert Habeck ist Geschichte. Nach dem Wahldebakel 2025 (bei dem er
-            sogar sein Direktmandat in der Heimat verlor) zog er im August 2025
-            die Reißleine und flüchtete aus dem Bundestag. Statt
-            Oppositionsarbeit zu leisten, lässt er sich nun lieber im Ausland
-            als „Distinguished Global Leader“ feiern und macht Podcasts im
-            Berliner Ensemble.
+            Nach dem Wahldebakel 2025 (bei dem er sogar sein Direktmandat in der
+            Heimat verlor) zog er im August 2025 die Reißleine und lässt sich
+            nun im Ausland als „Distinguished Global Leader“ feiern.
+          </p>
+
+          <p>
+            <strong
+              >Die "Schwachkopf-Affäre" (Hausdurchsuchung für ein Meme):</strong
+            >
+            Ende 2024 zeigte Habeck eindrucksvoll, wie er „Meinungsfreiheit“
+            interpretiert. Weil ein bayerischer Rentner ein harmloses
+            Satire-Bild retweetete, das Habeck als „Schwachkopf PROFESSIONAL“
+            (angelehnt an eine Shampoo-Marke) zeigte, erstattete der Minister
+            Strafanzeige. Die Folge: Eine
+            <strong>Hausdurchsuchung im Morgengrauen</strong>, bei der die
+            Polizei Tablets und Handys beschlagnahmte. Habeck mobilisierte also
+            die Staatsgewalt gegen Bürger, die Witze über ihn machten.
           </p>
 
           <p>
@@ -123,7 +134,7 @@
 
         <img
           class="bio-image"
-          src="https://i.imgur.com/RSL46ic.png"
+          src="https://i.imgur.com/scIRK5X.png"
           alt="Robert Habeck"
         />
       </div>
@@ -133,7 +144,97 @@
     <section class="party-highlights">
       <h2 class="party-section-title">Skandale und Kontroversen</h2>
 
-      <!-- Highlight 1: Realitätsferne Aussage zur Wirtschaft -->
+      <!-- Highlight: Schwachkopf-Affäre -->
+      <div class="party-highlight" id="schwachkopf">
+        <h3 class="party-highlight-title">
+          Die "Schwachkopf"-Razzia: Polizei, dein Freund und Meme-Jäger
+        </h3>
+
+        <div class="highlight-skandal-scale">
+          <h4>Machtmissbrauch-Skala: 8/10 ⚖️⚖️⚖️⚖️⚖️⚖️⚖️⚖️⚪⚪</h4>
+          <p class="highlight-description">
+            Wenn Minister die Polizei zur Hausdurchsuchung wegen eines
+            Witzbildes schicken – unverhältnismäßig und einschüchternd.
+          </p>
+          <div class="gradient-bar-container">
+            <!-- Voller roter Balken für maximalen Machtmissbrauch -->
+            <div class="gradient-bar-container">
+              <div class="gradient-bar-filled" style="width: 80%"></div>
+              <div class="gradient-bar-unfilled" style="width: 20%"></div>
+            </div>
+          </div>
+        </div>
+
+        <button class="toggle-button" onclick="toggleHighlight(this)">
+          Details anzeigen <span class="arrow">▼</span>
+        </button>
+
+        <div class="collapsible-content">
+          <p class="party-highlight-description">
+            Weil ein 64-jähriger Rentner aus Bayern ein Satire-Bild auf X
+            (ehemals Twitter) teilte, das den Minister als
+            <mark class="gruene">„Schwachkopf PROFESSIONAL“</mark> (in Anlehnung
+            an eine bekannte Shampoo-Marke) zeigte, erstattete Habeck Ende 2024
+            persönlich Strafanzeige.
+          </p>
+
+          <p class="party-highlight-description">
+            Die Reaktion des Rechtsstaats war absolut verhältnismäßig: Die
+            Staatsanwaltschaft schickte die Polizei zur
+            <strong>Hausdurchsuchung im Morgengrauen</strong>. Wohnräume wurden
+            durchsucht, Tablets beschlagnahmt. Der Staat zeigte hier volle Härte
+            gegen <b class="gruene">Internet-Memes</b>. Habeck verteidigte das
+            Vorgehen.
+          </p>
+
+          <p class="party-highlight-description">
+            <strong>Die Frage nach dem Sinn:</strong>
+            Da die "Tat" (der Retweet) online für jeden sichtbar und
+            dokumentiert war, konnte die Durchsuchung kaum der Beweissicherung
+            dienen. Juristen und Bürger fragen sich also bis heute, was der
+            taktische Zweck dieser Razzia war. Wollten die Beamten das digitale
+            Bild physisch "beschlagnahmen"? Oder bestand die akute Gefahr, dass
+            der Rentner auf seiner Festplatte ein
+            <strong>geheimes Lager weiterer Shampoo-Witze</strong> hortet, die
+            er jederzeit hätte "losteilen" können?
+          </p>
+
+          <!-- Eingebettetes YouTube-Video -->
+          <div class="smallvideo-container">
+            <div class="video-wrapper">
+              <!-- Hier Video-ID einfügen -->
+              <iframe
+                src="https://www.youtube.com/embed/4Im_ldM4pwY?si=RRj86e_ryLtXgsWA"
+                title="Das Video-Interview mit dem Mann, der Habeck 'Schwachkopf' nannte"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
+          <p class="party-highlight-date">
+            <strong>Zeitraum:</strong> November 2024
+          </p>
+          <p class="party-highlight-source">
+            <strong>Quelle:</strong>
+            <a
+              href="https://de.wikipedia.org/wiki/Schwachkopf-Aff%C3%A4re"
+              target="_blank"
+              >Wikipedia: Schwachkopf-Affäre</a
+            >
+          </p>
+
+          <div class="party-highlight-hashtags">
+            <span class="hashtag">#schwachkopf</span>
+            <span class="hashtag">#machtmissbrauch</span>
+            <span class="hashtag">#justizwillkür</span>
+            <a href="./">#habeck</a>
+            <a href="../">#grüne</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Highlight: Realitätsferne Aussage zur Wirtschaft -->
       <div class="party-highlight">
         <h3 class="party-highlight-title">
           Wenn nichts verkaufen kein Problem ist – Habecks Wirtschaftslogik
@@ -210,7 +311,7 @@
         <h3 class="party-highlight-title">20% Eigenkapitalquote für Banken</h3>
 
         <div class="highlight-skandal-scale">
-          <h4>Eigenkapital-Skala: 2/10 🏦🏦⚪⚪⚪⚪⚪⚪⚪⚪</h4>
+          <h4>Eigenhirn-Skala: 2/10 🏦🏦⚪⚪⚪⚪⚪⚪⚪⚪</h4>
           <p class="highlight-description">
             Revolutionärer Ansatz: Mehr Eigenkapital für alle! Oder so…
           </p>
