--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -151,7 +151,7 @@
         </h3>
 
         <div class="highlight-skandal-scale">
-          <h4>Machtmissbrauch-Skala: 8/10 ⚖️⚖️⚖️⚖️⚖️⚖️⚖️⚖️⚪⚪</h4>
+          <h4>Schwachkopf-Skala: 8/10 ⚖️⚖️⚖️⚖️⚖️⚖️⚖️⚖️⚪⚪</h4>
           <p class="highlight-description">
             Wenn Minister die Polizei zur Hausdurchsuchung wegen eines
             Witzbildes schicken – unverhältnismäßig und einschüchternd.
