--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -199,13 +199,20 @@
             er jederzeit hätte "losteilen" können?
           </p>
 
-          <!-- Eingebettetes YouTube-Video -->
-          <div class="smallvideo-container">
+          <div class="smallvideo-container two-videos">
             <div class="video-wrapper">
-              <!-- Hier Video-ID einfügen -->
               <iframe
                 src="https://www.youtube.com/embed/4Im_ldM4pwY?si=RRj86e_ryLtXgsWA"
                 title="Das Video-Interview mit dem Mann, der Habeck 'Schwachkopf' nannte"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/J3es4pjlFbA?si=3Yfw442pVwnyayXL"
+                title="Methoden der Einschüchterung (Habecks Schwachkopf-Anzeige) | Prof. Dr. Christian Rieck"
                 frameborder="0"
                 allowfullscreen
               ></iframe>
