--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -431,7 +431,7 @@
   <li class="party-member-item">
     <a href="../bas/">Bärbel Bas</a>
   </li>
-        <li class="party-member-item">Karl Lauterbach</li>
+        <li class="../grote/">Andy Grote</li>
       </ul>
     </section>
 
