--- a/spd/grote/index.html
+++ b/spd/grote/index.html
@@ -84,13 +84,13 @@
             mit zweierlei Maß: Strenge für das Volk, Partys für die Elite.
           </p>
         </div>
-        <img
-          class="bio-image"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Andy_Grote_2016.jpg/640px-Andy_Grote_2016.jpg"
-          alt="Andy Grote"
-        />
-      </div>
-    </section>
+    <img
+    class="bio-image"
+    src="https://i.imgur.com/BZpRHwO.png"
+    alt="Andy Grote"
+  />
+</div>
+</section>
 
     <!-- Highlights Section -->
     <section class="party-highlights">
