--- a/spd/grote/index.html
+++ b/spd/grote/index.html
@@ -207,9 +207,9 @@
         <li class="party-member-item">
           <a href="../feaser/">Nancy Faeser</a>
         </li>
-        <li class="../bas/">Bärbel Bas</li>
-      </ul>
-    </section>
+        <li class="party-member-item">
+          <a href="../bas/">Bärbel Bas</a>
+        </li>    </section>
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
