--- a/impressum/index.html
+++ b/impressum/index.html
@@ -41,7 +41,7 @@
         </p>
 
         <h2 class="datenschutz-section-title">
-          Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV
+          Verantwortlich für den Inhalt nach § 18 Abs. 2 MStV
         </h2>
         <p class="datenschutz-text">
           Andreas Siade<br />
@@ -68,6 +68,12 @@
           fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der
           verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der
           Seiten verantwortlich.
+        </p>
+
+        <h2 class="datenschutz-section-title">Streitbeilegung</h2>
+        <p class="datenschutz-text">
+          Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren
+          vor einer Verbraucherschlichtungsstelle teilzunehmen.
         </p>
 
         <h2 class="datenschutz-section-title">Urheberrecht</h2>
