--- a/spd/grote/index.html
+++ b/spd/grote/index.html
@@ -173,8 +173,7 @@
           </p>
 
           <p class="party-highlight-source">
-            <strong>Quelle:</strong> Welt -
-            <a
+            <strong>Quelle:</strong> Welt: <a
               href="https://www.welt.de/regionales/hamburg/article240323823/Beleidigung-von-Andy-Grote-Pimmelgate-Razzia-war-rechtswidrig.html"
               target="_blank"
               >„Pimmelgate“-Razzia war rechtswidrig
