--- a/usa/musk/index.html
+++ b/usa/musk/index.html
@@ -66,27 +66,27 @@
           </p>
 
           <p>
-            <strong>Persönliches Leben:</strong> Musk ist Vater von elf Kindern
-            (Stand März 2025), unter anderem mit der Musikerin Grimes. Er ist
-            bekannt für seine exzentrische Lebensweise und seine Liebe zu Sci-Fi
-            und Videospielen.
+            <strong>Persönliches Leben:</strong> Musk ist Vater von elf Kindern,
+            unter anderem mit der Musikerin Grimes. Er ist bekannt für seine
+            exzentrische Lebensweise und seine Liebe zu Sci-Fi und Videospielen.
           </p>
 
           <h3>Werdegang</h3>
           <p>
-            <strong>1995-1999:</strong> Gründung von Zip2, verkauft für 307 Mio.
+            <strong>2022:</strong> Übernahme von Twitter (heute X) für 44 Mrd.
             Dollar.
-          </p>
-          <p>
-            <strong>1999-2002:</strong> Mitgründer von X.com, das zu PayPal
-            wurde (2002 für 1,5 Mrd. Dollar verkauft).
           </p>
           <p>
             <strong>2002-heute:</strong> Gründung von SpaceX, Tesla-Übernahme,
             Neuralink, The Boring Company.
           </p>
           <p>
-            <strong>2022:</strong> Übernahme von Twitter (heute X) für 44 Mrd.
+            <strong>1999-2002:</strong> Mitgründer von X.com, das zu PayPal
+            wurde (2002 für 1,5 Mrd. Dollar verkauft).
+          </p>
+
+          <p>
+            <strong>1995-1999:</strong> Gründung von Zip2, verkauft für 307 Mio.
             Dollar.
           </p>
 
