--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -44,27 +44,28 @@
           <p><strong>Partei:</strong> Christlich Demokratische Union (CDU)</p>
           <p>
             <strong>Aktuelles Amt:</strong> Bundeskanzler der Bundesrepublik
-            Deutschland (seit Mai 2025)
+            Deutschland (seit Mai 2025) – regiert jedoch faktisch im
+            Schwitzkasten der SPD.
           </p>
 
           <h3>Bildung & Berufslaufbahn</h3>
           <p>
             <strong>Jurist:</strong> Studium in Bonn, Richter am Amtsgericht
             (kurzzeitig), danach Rechtsanwalt. Merz weiß also theoretisch, was
-            Recht und Gesetz sind – auch wenn er sie politisch gerne biegt.
+            Recht und Gesetz sind – auch wenn er sie politisch gerne biegt
+            (siehe Schuldenbremse).
           </p>
           <p>
-            <strong>Die "BlackRock"-Jahre:</strong>
+            <strong>Die BlackRock-Jahre:</strong>
             Bevor er Deutschland übernahm, übte er an der Wirtschaft: Als
             Aufsichtsratsvorsitzender von BlackRock Deutschland (2016–2020)
             knüpfte er die Kontakte, die ihm heute als "Kanzler der Konzerne"
-            sicher nicht schaden. Kritiker nannten es Lobbyismus, er nannte es
-            wohl Vorbereitung.
+            sicher nicht schaden. Kritiker nannten es Lobbyismus, er sah es wohl
+            als Vorbereitung.
           </p>
           <p>
             <strong>Privat:</strong> Verheiratet mit Charlotte Merz, drei
-            Kinder, Hobby-Pilot eines eigenen Flugzeugs (was ihn sicher sehr nah
-            an die Lebensrealität der Geringverdiener bringt).
+            Kinder, Hobby-Pilot eines eigenen Flugzeugs.
           </p>
 
           <h3>Politische Laufbahn</h3>
@@ -73,13 +74,13 @@
             einer GroKo mit der 16%-SPD.
           </p>
           <p>
-            <strong>02/2025:</strong> Wahlsieger der Bundestagswahl (28,5 %).
+            <strong>02/2025:</strong> Wahlsieger der Bundestagswahl (28,5%).
           </p>
           <p><strong>2022 – heute:</strong> Vorsitzender der CDU.</p>
           <p>
-            <strong>2009 – 2021:</strong> Die "Schmollecke": Rückzug aus der
-            Politik in die freie Wirtschaft, nachdem er den Machtkampf gegen
-            Angela Merkel verloren hatte.
+            <strong>2009 – 2021:</strong> Rückzug aus der Politik in die freie
+            Wirtschaft, nachdem er den Machtkampf gegen Angela Merkel verloren
+            hatte.
           </p>
           <p>
             <strong>2000 – 2002:</strong> Unions-Fraktionsvorsitzender (bis
@@ -88,7 +89,10 @@
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Flexibilität. Merz schafft das
+            <strong>Schwerpunkte:</strong> Flexibilität und Machterhalt um jeden
+            Preis. Merz hält dogmatisch an der "Brandmauer" nach rechts fest,
+            was ihn strategisch in eine Sackgasse manövriert hat und ihn zum
+            Befehlsempfänger linker Koalitionspartner macht. So schafft er das
             Kunststück, gleichzeitig als konservativer Hardliner und als
             Erfüller sozialdemokratischer Ausgabenträume aufzutreten – je
             nachdem, was für den Machterhalt gerade nötig ist.
@@ -96,32 +100,43 @@
 
           <h3>FACTS</h3>
           <p>
-            Friedrich Merz hat sein Lebensziel erreicht: Er ist Kanzler. Dafür
-            musste er nur sämtliche Prinzipien über Bord werfen, die er im
-            Wahlkampf 2025 noch heiliggesprochen hatte. Mit mageren 28,5 % der
-            Stimmen rettete er sich in eine Koalition mit einer historisch
-            schwachen SPD (16,4 %), da sein Wunschpartner FDP an der 5%-Hürde
-            scheiterte.
+            <strong>Der "Zufallskanzler":</strong>
+            Friedrich Merz sitzt im Kanzleramt, aber seine Legitimation steht
+            auf tönernen Füßen. Dass es überhaupt für eine Mehrheit reichte,
+            liegt einzig daran, dass das <strong>BSW</strong> (Bündnis Sahra
+            Wagenknecht) äußerst dubios an der 5%-Hürde scheiterte. Wahlexperten
+            und Beobachter zweifeln dieses Ergebnis bis heute an oder halten es
+            für statistisch höchst unwahrscheinlich. Wäre das BSW eingezogen,
+            wäre Merz heute Geschichte.
+          </p>
+          <p>
+            <strong>Die "Brandmauer-Falle" (Doppelt dumm):</strong>
+            Merz' größter Fehler war das Festhalten an der sogenannten
+            Brandmauer zur AfD. Was er als "Haltung" verkauft, ist faktisch
+            <strong>undemokratisch</strong> (da Millionen Wählerstimmen
+            ignoriert werden) und machtpolitisch ein Desaster.
+            <br />
+            Indem er sich selbst jede Option rechts der Mitte verbot, machte er
+            sich <strong>erpressbar</strong>. Er musste die SPD (16,4 %) in die
+            Regierung holen. Die Folge: Die Wahlverlierer diktieren den Kurs,
+            Merz darf nur unterschreiben.
           </p>
 
           <p>
-            <strong>Wahlversprechen vs. Realität (Dezember 2025):</strong><br />
-            Im Wahlkampf inszenierte sich Merz als Gralshüter der
-            <strong>Schuldenbremse</strong> („Keine Aufweichung mit mir!“). Kaum
-            im Amt, segnete er mit der SPD ein
-            500-Milliarden-Euro-Investitionspaket ab, das die Schuldenbremse
-            faktisch beerdigt. Er nennt es „ökonomische Vernunft“, Wähler nennen
-            es Wortbruch.
+            <strong>Die Konsequenzen (Wortbruch am laufenden Band):</strong
+            ><br />
+            Diese Erpressbarkeit wurde sofort sichtbar. Im Wahlkampf war die
+            <strong>Schuldenbremse</strong> noch heilig ("Keine Aufweichung mit
+            mir!"). Kaum im Amt, nickte er auf Druck der SPD ein
+            500-Milliarden-Euro-Paket ab und beerdigte die fiskalische Vernunft.
           </p>
 
           <p>
-            Ähnlich beim Thema <strong>Migration</strong>: Nach Solingen
-            forderte Merz noch lautstark Aufnahmestopps und Zurückweisungen
-            („Die Grenzen müssen dicht sein!“). Als Kanzler erklärte er
-            plötzlich, dass „niemand ernsthaft von geschlossenen Grenzen rede“.
-            Diese 180-Grad-Wende sicherte ihm den Koalitionsfrieden mit der SPD,
-            kostete ihn aber den letzten Rest Glaubwürdigkeit im konservativen
-            Lager.
+            Auch bei der <strong>Migration</strong> ("Grenzen dicht!") vollzog
+            er eine 180-Grad-Wende. Um den Koalitionsfrieden mit der linken
+            Seite nicht zu gefährden, erklärte er plötzlich, dass "niemand
+            ernsthaft von geschlossenen Grenzen rede". Merz regiert nicht – er
+            wird regiert.
           </p>
         </div>
 
