--- a/fdp/index.html
+++ b/fdp/index.html
@@ -255,6 +255,9 @@
     <section class="party-members">
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
+        <li class="party-member-item">
+          <a href="../fdp/strack-zimmermann/">Marie-Agnes Strack-Zimmermann</a>
+        </li>
         <li class="party-member-item">Christian Lindner</li>
         <li class="party-member-item">Wolfgang Kubicki</li>
         <li class="party-member-item">Guido Westerwelle</li>
