--- a/fdp/strack-zimmermann/index.html
+++ b/fdp/strack-zimmermann/index.html
@@ -90,6 +90,10 @@
       </div>
     </section>
 
+        <!-- Highlights Section -->
+        <section class="party-highlights">
+            <h2 class="party-section-title">Skandale und Kontroversen</h2>
+
    <!-- Highlight 1: Doppelmoral (Anzeigen vs. Pöbeln) -->
    <div class="party-highlight" id="doppelmoral">
     <h3 class="party-highlight-title">
