--- a/fdp/strack-zimmermann/index.html
+++ b/fdp/strack-zimmermann/index.html
@@ -143,7 +143,7 @@
         </div>
 
           <p class="party-highlight-date">
-            <strong>Zeitraum:</strong> März 2022
+            <strong>Zeitraum:</strong> 2023 / 2024
           </p>
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
