faeser meinungsfreiheit highlight

--- a/spd/esken/index.html
+++ b/spd/esken/index.html
@@ -161,7 +161,7 @@
         </h3>
 
         <div class="highlight-skandal-scale">
-          <h4>Rhetorische Überzeugungskraft: 3/10 💡💡💡⚪⚪⚪⚪⚪⚪</h4>
+          <h4>Rhetorik: 3/10 💡💡💡⚪⚪⚪⚪⚪⚪</h4>
           <p class="highlight-description">
             Eskens charmante Wortwahl, die keine Fragen offenlässt – außer
             vielleicht, warum sie überhaupt gewählt wurde.
