--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -302,6 +302,82 @@
           </div>
         </div>
       </div>
+
+      <!-- Highlight: Bewährungsstrafe für Kritik -->
+      <div class="party-highlight" id="bewaehrung">
+        <h3 class="party-highlight-title">
+          "Ich hasse die Meinungsfreiheit": Die selbsterfüllende Prophezeiung
+        </h3>
+
+        <div class="highlight-skandal-scale">
+          <h4>Ironie-Faktor: 7/10 🤐🤐🤐🤐🤐🤐🤐⚪⚪⚪</h4>
+          <p class="highlight-description">
+            Wer Satire über Zensur verbieten lässt, liefert die Pointe gleich
+            mit.
+          </p>
+        </div>
+
+        <div class="gradient-bar-container">
+          <div class="gradient-bar-filled" style="width: 70%"></div>
+          <div class="gradient-bar-unfilled" style="width: 30%"></div>
+        </div>
+
+        <button class="toggle-button" onclick="toggleHighlight(this)">
+          Details anzeigen <span class="arrow">▼</span>
+        </button>
+        <div class="collapsible-content">
+          <p class="party-highlight-description">
+            Im April 2025 erreichte der "Kampf gegen Rechts" (oder eher: der
+            Kampf gegen Kritik) eine neue Stufe der Absurdität. Der Journalist
+            David Bendels wurde zu einer
+            <strong>Bewährungsstrafe</strong> verurteilt. Sein Verbrechen? Er
+            teilte ein satirisches Bild, das Nancy Faeser das fiktive Zitat
+            <mark class="spd">„Ich hasse die Meinungsfreiheit“</mark> in den
+            Mund legte.
+          </p>
+
+          <p class="party-highlight-description">
+            <strong>Der Staat beweist das Meme:</strong>
+            Indem die Justiz einen Bürger mit Gefängnis (auf Bewährung) bedroht,
+            weil er der Ministerin eine Abneigung gegen freie Rede unterstellt,
+            hat der Staat die These des Bildes quasi
+            <strong>amtlich bestätigt</strong>. Ein Eintrag im Führungszeugnis
+            für ein Meme – während Gewalttäter oft milde davonkommen – zeigt, wo
+            die Prioritäten liegen.
+          </p>
+
+          <div class="smallvideo-container">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/ShaOgTwTCZM?si=j2uFBXpttGJugV2l"
+                title="DEUTSCHLANDKURIER: Nach Satire gegen Faeser! Gefahr für Demokratie? Bewährung für Journalisten"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
+          <p class="party-highlight-date">
+            <strong>Zeitraum:</strong> April 2025
+          </p>
+          <p class="party-highlight-source">
+            <strong>Quelle:</strong>
+            <a
+              href="https://www.zeit.de/politik/ausland/2025-04/urteil-david-bendels-nancy-faeser-meinungsfreiheit-gericht"
+              target="_blank"
+              >Zeit: Der rechte Publizist David Bendels wurde verurteilt, weil
+              er eine Satire auf die Innenministerin gepostet hat.</a
+            >
+          </p>
+
+          <div class="party-highlight-hashtags">
+            <span class="hashtag">#meinungsfreiheit</span>
+            <span class="hashtag">#justizwillkür</span>
+            <span class="hashtag">#streisandeffekt</span>
+            <a href="../">#spd</a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="party-members">
