--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -346,7 +346,15 @@
             die Prioritäten liegen.
           </p>
 
-          <div class="smallvideo-container">
+          <div class="smallvideo-container two-videos">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/-_5q6j-6q3Y?si=dcceFgET0FUwLRxl"
+                title="DEUTSCHLAND-KURIER: 'Das kennt man aus Diktaturen' Urteil gegen Chefredakteur Bendels empört"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
             <div class="video-wrapper">
               <iframe
                 src="https://www.youtube.com/embed/ShaOgTwTCZM?si=j2uFBXpttGJugV2l"
