--- a/spd/bas/index.html
+++ b/spd/bas/index.html
@@ -245,10 +245,11 @@
         </li>
         <li class="party-member-item">
           <a href="../feaser/">Nancy Faeser</a>
-        </li>
-        <li class="party-member-item">Karl Lauterbach</li>
-      </ul>
-    </section>
+          <li class="party-member-item">
+            <a href="../grote/">Andy Grote</a>
+          </li>
+        </ul>
+      </section>
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
