--- a/spd/esken/index.html
+++ b/spd/esken/index.html
@@ -224,7 +224,10 @@
         <li class="party-member-item">
           <a href="../bas/">Bärbel Bas</a>
         </li>
-        <li class="../grote/">Andy Grote</li>
+
+        <li class="party-member-item">
+          <a href="../grote/">Andy Grote</a>
+        </li>
       </ul>
     </section>
 
