--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -431,9 +431,11 @@
   <li class="party-member-item">
     <a href="../bas/">Bärbel Bas</a>
   </li>
-        <li class="../grote/">Andy Grote</li>
-      </ul>
-    </section>
+  <li class="party-member-item">
+    <a href="../grote/">Andy Grote</a>
+  </li>
+</ul>
+</section>
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
