--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -403,8 +403,11 @@
         <li class="party-member-item">
           <a href="../bas/">Bärbel Bas</a>
         </li>
-        <li class="../grote/">Andy Grote</li>
-      </li>
+
+        <li class="party-member-item">
+          <a href="../grote/">Andy Grote</a>
+        </li>
+      </ul>
     </section>
 
     <footer class="party-footer">
